--- a/less/main.less
+++ b/less/main.less
@@ -4,7 +4,47 @@ body {
     .addition-container {
         background: white;
         max-width: 600px;
-        margin: 1em auto;
+        margin: 3em auto 1em;
+        font-family: arial;
         padding: 1em;
+
+        ul {
+            list-style: none;
+            padding: 1em;
+
+            li {
+                background: rgba(0, 188, 212, 0.99);
+                color: #f3f3f3;
+                cursor: pointer;
+                border-radius: 4px;
+                padding: 16px 20px;
+                margin: 10px;
+                width: 165px;
+
+                &:hover {
+                    background: darken(rgba(0, 188, 212, 0.99), 10%);
+                }
+            }
+        }
+
+        .add-item {
+            box-shadow: none;
+            border: none;
+            font-size: 16px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            background: #768185;
+            color: #f3f3f3;
+            display: block;
+            margin: 10px auto;
+            width: 240px;
+            cursor: pointer;
+            border-radius: 4px;
+            padding: 16px 20px;
+
+            &:hover {
+                background: darken(#768185, 10%);
+            }
+        }
     }
 }
