--- a/less/main.less
+++ b/less/main.less
@@ -14,12 +14,13 @@ body {
 
             li {
                 background: rgba(0, 188, 212, 0.99);
+                letter-spacing: 1px;
                 color: #f3f3f3;
                 cursor: pointer;
                 border-radius: 4px;
                 padding: 16px 20px;
                 margin: 10px;
-                width: 165px;
+                width: 185px;
 
                 &:hover {
                     background: darken(rgba(0, 188, 212, 0.99), 10%);
@@ -46,5 +47,12 @@ body {
                 background: darken(#768185, 10%);
             }
         }
+    }
+    .order-container {
+        background: white;
+        max-width: 600px;
+        margin: 3em auto 1em;
+        font-family: arial;
+        padding: 1em;
     }
 }
