--- a/less/main.less
+++ b/less/main.less
@@ -54,5 +54,15 @@ body {
         margin: 3em auto 1em;
         font-family: arial;
         padding: 1em;
+
+        ul {
+            list-style: none;
+            padding-left: 0;
+
+            li {
+                padding: 1em;
+                border-bottom: 1px solid #e1e1e1;
+            }
+        }
     }
 }
