updates - proxy problems

--- a/less/main.less
+++ b/less/main.less
@@ -4,9 +4,11 @@ body {
     .addition-container {
         background: white;
         max-width: 600px;
-        margin: 3em auto 1em;
+        // margin: 3em auto 1em;
         font-family: arial;
         padding: 1em;
+        width: 40%;
+        float: left;
 
         ul {
             list-style: none;
@@ -51,9 +53,11 @@ body {
     .order-container {
         background: white;
         max-width: 600px;
-        margin: 3em auto 1em;
+        // margin: 3em auto 1em;
         font-family: arial;
         padding: 1em;
+        width: 40%;
+        float: left;
 
         ul {
             list-style: none;
