added selected state

--- a/less/main.less
+++ b/less/main.less
@@ -37,6 +37,10 @@ body {
                 &:hover {
                     background: darken(rgba(0, 188, 212, 0.99), 10%);
                 }
+
+                &.selected {
+                    background: darken(rgba(0, 188, 212, 0.99), 20%);
+                }
             }
         }
 
